# farben

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: deploy-docs.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/components/: Changelog.vue
docs/.vitepress/theme/: style.css
docs/.vitepress/theme/components/: NewsIndex.vue
docs/changelog/: index.md
docs/conventions/: index.md
docs/conventions/colors-and-printing/: index.md
docs/conventions/errors-and-compiling/: index.md
docs/conventions/tips-and-tricks/: index.md
docs/examples/api-examples/: index.md
docs/examples/project-examples/: index.md
docs/guide/: index.md
docs/guide/advanced-colors/: index.md
docs/guide/anstyle/: index.md
docs/guide/bleeding/: index.md
docs/guide/cformat/: index.md
docs/guide/colors-in-depth/: index.md
docs/guide/custom-tags/: index.md
docs/guide/debugging/: index.md
docs/guide/getting-started/: index.md
docs/guide/inline/: index.md
docs/guide/markdown/: index.md
docs/guide/pre-requisites/: index.md
docs/guide/specifically-resetting/: index.md
docs/guide/standard-error/: index.md
docs/guide/stripping-ansi/: index.md
docs/news/: 2026-04-18-conventions.md  2026-04-18-new-news.md  2026-04-18-semver.md  2026-04-19-thuli-repl.md  2026-05-06-a-break.md  2026-05-12-crate-of-the-week.md  2026-06-05-licensing-changes.md  _read.md  _template.md  index.md  news.data.ts
docs/styles/: index.md
docs/styles/advanced/: index.md
docs/styles/rulez/: index.md
docs/styles/styles-toml/: index.md
farben/: Cargo.toml  README.md
farben-build/: Cargo.toml  README.md
farben-build/src/: core.rs  lib.rs  parser.rs
farben-core/: Cargo.toml  LICENSE.md  README.md
farben-core/benches/: farben_bench.rs
farben-core/src/: ansi.rs  anstyle_conv.rs  debug.rs  degrader.rs  env.rs  errors.rs  inline.rs  lexer.rs  lib.rs  parser.rs  registry.rs  state.rs  strip.rs
farben-macros/: Cargo.toml  LICENSE.md  README.md
farben-macros/src/: lib.rs  template.rs
farben-md/: Cargo.toml  LICENSE.md  README.md
farben-md/src/: lexer.rs  lib.rs  parser.rs  renderer.rs
farben/examples/: basic.rs
farben/src/: core.rs  functions.rs  lib.rs  main.rs  prelude.rs  tests.rs
farben/src/macros/: anstyle.rs  color.rs  eprint.rs  expand.rs  format.rs  load.rs  markdown.rs  mod.rs  strip.rs
src/: ansi.rs  colors.rs  errors.rs  lexer.rs  lib.rs  main.rs  parser.rs
testfarbenyay/: Cargo.toml  build.rs  farben.frb.toml
testfarbenyay/src/: main.rs
