[workspace]
members = [
    "farben", "farben-build", "farben-core",
    "farben-macros", "farben-md", "testfarbenyay"
]
resolver = "3"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[workspace.dependencies]
farben-core = { path = "farben-core", version = "0.13.3" }
farben-macros = { path = "farben-macros", version = "0.5.2" }
farben-md = { path = "farben-md", version = "0.2.2" }
