[package]
name = "farben-build"
version = "0.1.2"
edition = "2024"
description = "Build script support for Farben. Parses .frb.toml style files and generates compile-time style registries."
license = "MIT OR Apache-2.0"
repository = "https://github.com/razkar-studio/farben"
readme = "README.md"
documentation = "https://docs.rs/farben-build"
keywords = ["terminal", "color", "ansi", "markup", "cli"]
categories = ["command-line-interface"]
homepage = "https://razkar-studio.github.io/farben"

[dependencies]
# Zero dependencies
