[package]
name = "farben-core"
version = "0.6.4"
edition = "2024"
description = "The internal core library for Farben"
license = "MIT OR Apache-2.0"
repository = "https://github.com/razkar-studio/farben"
readme = "README.md"
documentation = "https://docs.rs/farben-core"
keywords = ["terminal", "color", "ansi", "markup", "cli"]
categories = ["command-line-interface"]
homepage = "https://razkar-studio.github.io/farben"

[dependencies]
# Zero dependencies
