[package]
name = "farben-core"
version = "0.14.0-beta.3"
edition = "2024"
description = "The internal core library for Farben"
license = "MIT OR Apache-2.0"
repository = "https://github.com/razkar-studio/farben"
readme = "README.md"
documentation = "https://docs.rs/farben-core"
keywords = ["terminal", "color", "ansi", "markup", "cli"]
categories = ["command-line-interface"]
homepage = "https://razkar-studio.github.io/farben"

[features]
lossy = []
inline = []
default = ["lossy"]
anstyle = ["dep:anstyle"]

[dependencies]
anstyle = { version = "1", optional = true }

[[bench]]
name = "farben_bench"
harness = false

[dev-dependencies]
criterion = "0.8.2"
