[package]
name = "farben-macros"
version = "0.5.0"
edition = "2024"
description = "Procedural macros for Farben"
license = "MIT OR Apache-2.0"
repository = "https://github.com/razkar-studio/farben"
readme = "README.md"
documentation = "https://docs.rs/farben-macros"
keywords = ["terminal", "color", "ansi", "markup", "cli"]
categories = ["command-line-interface"]
homepage = "https://razkar-studio.github.io/farben"

[lib]
proc-macro = true

[dependencies]
farben-core = { workspace = true }
farben-md = { workspace = true, optional = true }
syn = "2"
quote = "1"
proc-macro2 = "1"

[features]
markdown = ["farben-md"]
