[package]
name = "farben-macros"
version = "0.7.0-beta.2"
edition = "2024"
description = "Procedural macros for Farben"
license = "MIT OR Apache-2.0"
repository = "https://github.com/razkar-studio/farben"
readme = "README.md"
documentation = "https://docs.rs/farben-macros"
keywords = ["terminal", "color", "ansi", "markup", "cli"]
categories = ["command-line-interface"]
homepage = "https://razkar-studio.github.io/farben"

[lib]
proc-macro = true

[dependencies]
farben-core = { workspace = true }
farben-md = { workspace = true, optional = true }
litext = "1.3"
comperr = "1"
quote = "1"
proc-macro2 = "1"

[features]
# Deprecated
markdown = ["farben-md"]
