[package]
name = "farben-md"
version = "0.1.0"
edition = "2024"
description = "The markdown rendering internals for Farben"
license-file = "LICENSE.md"
repository = "https://github.com/razkar-studio/farben"
readme = "README.md"
documentation = "https://docs.rs/farben-core"
keywords = ["terminal", "color", "ansi", "markup", "cli"]
categories = ["command-line-interface"]
homepage = "https://razkar-studio.github.io/farben"

[dependencies]
farben-core = { workspace = true }
