[package]
name = "farben-md"
version = "0.2.1"
edition = "2024"
description = "The markdown rendering internals for Farben"
license = "MIT OR Apache-2.0"
repository = "https://github.com/razkar-studio/farben"
readme = "README.md"
documentation = "https://docs.rs/farben-md"
keywords = ["terminal", "color", "ansi", "markup", "cli"]
categories = ["command-line-interface"]
homepage = "https://razkar-studio.github.io/farben"

[dependencies]
farben-core = { workspace = true }
