[package]
name = "farben"
version = "0.8.1"
edition = "2024"
description = "Markup for the Terminal, but safer and faster."
license = "MIT OR Apache-2.0"
repository = "https://github.com/razkar-studio/farben"
readme = "README.md"
documentation = "https://docs.rs/farben"
keywords = ["terminal", "color", "ansi", "markup", "cli"]
categories = ["command-line-interface"]
homepage = "https://razkar-studio.github.io/farben"

[dependencies]
farben-core = { workspace = true }
farben-macros = { version = "0.4.1", optional = true }
farben-md = { version = "0.1.1", optional = true }

[features]
default = ["format"]
format = []
compile = ["farben-macros"]
markdown = ["farben-md"]
markdown-compile = ["markdown", "compile", "farben-macros/markdown"]
