[package]
name = "farben"
version = "0.20.0"
edition = "2024"
description = "Markup for the Terminal, but safer and faster."
license = "MPL-2.0"
repository = "https://github.com/razkar-studio/farben"
readme = "README.md"
documentation = "https://docs.rs/farben"
keywords = ["terminal", "color", "ansi", "markup", "cli"]
categories = ["command-line-interface"]
homepage = "https://razkar-studio.github.io/farben"

[dependencies]
farben-core = { workspace = true }
farben-macros = { workspace = true, optional = true }
farben-md = { workspace = true, optional = true }
anstyle = { version = "1", optional = true }

[features]
default = ["format", "lossy"]
format = []
inline = ["farben-core/inline"]
lossy = ["farben-core/lossy"]
anstyle = ["farben-core/anstyle", "dep:anstyle"]
compile = ["farben-macros"]
# Deprecated: use `inline` instead.
markdown = ["farben-md"]
markdown-compile = ["markdown", "compile", "farben-macros/markdown"]
